--- a/frontend/index/user.html
+++ b/frontend/index/user.html
@@ -76,6 +76,7 @@
     .r-p-s {
         background-color: var(--main-bg-color-2);
         border-radius: 20px;
+        box-shadow: var(--shadow-1);
         cursor: pointer;
     }.t-t-t {
         background-color: var(--main-bg-color-2);
@@ -101,7 +102,6 @@
     <div class="games">
         <div class="r-p-s in-game" onclick="r_p_c()">Rock-Paper-scissors</div>
         <div class="t-t-t in-game" onclick="t_t_t()">ttt</div>
-        <div class="r-p-s in-game" onclick="r_p_c()">Rock-Paper-scissors</div>
     </div>
 </body>
 <script>
