--- a/frontend/index/login.html
+++ b/frontend/index/login.html
@@ -104,6 +104,7 @@
 </style>
 
 <body>
+  <!-- <div><img src="../assets/—Pngtree—pink cartoon planet illustration_4578322.png"></div> -->
   <div class="title">
     <a href="/"><img src="/assets/favicon/favicon-32x32.png"></a>
     <h2 style="color: white;">Login</h2>
@@ -128,6 +129,7 @@
       <a href="sign-up" style="color: rgb(219, 102, 255); padding-left: 2%;">Sign up</a>
     </div>
   </div>
+  <!-- <div><img src="../assets/—Pngtree—planet cartoon planet cartoon planet_7157759.png"></div> -->
 </body>
 <script>
   const input_username = document.getElementById("username");
