--- a/frontend/index/index.html
+++ b/frontend/index/index.html
@@ -1,91 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico">
-    <link rel="stylesheet" href="/frontend/css/index.css">
-    <link rel="stylesheet" href="/frontend/css/animation.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico" />
+    <link rel="stylesheet" href="/frontend/css/index.css" />
+    <link rel="stylesheet" href="/frontend/css/animation.css" />
     <title>Nova Star</title>
-</head>
-<style>
-    body::-webkit-scrollbar {
-        display: none;
-    }
-
+  </head>
+  <style>
     .header-overlay {
-        position: fixed;
-        display: flex;
-        justify-content: space-between;
-        align-self: center;
-        width: 100%;
-        top: 0%;
-        left: 0%;
-        padding: 2% 1%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 2% 3%;
     }
 
+    .header-overlay > a img{
+        display: flex;
+    }
+    
     .user {
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
 
-    .user>a {
-        padding-left: 20px;
-        font-size: 20px;
+    .user > a {
+        padding: 0 10px;
         color: var(--text-color-2);
         cursor: pointer;
+        transition: all 0.3s ease 0s;
+    }
+
+    .user > a:hover{
+        color: rgba(var(--text-color-2), 0.8);
     }
 
     .title {
         text-align: center;
         background: var(--main-color-2);
         padding: 14px 16px;
-        margin: 8% 12% 6% 12%;
-        width: 73%;
+        margin: 8% 12% 6%;
+        min-width: 250px; 
+        max-width: 80%;
         font-size: 120%;
         border-radius: 25px;
         box-shadow: var(--shadow);
     }
 
+
     @media only screen and (max-width: 768px) {
         .title {
-            margin: 15% 5%;
-            width: 90%;
+            margin: 12% 5% 10%;
+            max-width: 90%;
         }
 
         .header-overlay {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: relative;
             padding: 2% 1%;
         }
-    }
-</style>
+    } 
+  </style>
 
-<body class="background">
-    <header class="header-overlay header-logged">
-        <div class="novastar">
-            <a href="#"><img src="/assets/favicon/favicon-32x32.png"></a>
-        </div>
-
-        <div class="user">
-            <a href="login">Login</a>
-            <a href="sign-up">Sign up</a>
-        </div>
+  <body class="background">
+    <header class="header-overlay">
+      <a href="/"
+        ><img src="/assets/favicon/favicon-32x32.png" loading="lazy"
+      /></a>
+      <div class="user">
+        <a href="login">Login</a>
+        <a href="sign-up">Sign up</a>
+      </div>
     </header>
     <!--Title-->
     <div class="title">
-        <img src="/assets/favicon/android-chrome-192x192.png">
-        <h1>Nova Star</h1>
+      <img src="/assets/favicon/android-chrome-192x192.png" loading="lazy" />
+      <h1>Nova Star</h1>
     </div>
     <div class="title">
-        <h1># Open space for you</h1>
-        <p> Play 'fun' Games with friends</p>
+      <h2># Open space for you</h2>
+      <p>Play 'fun' Games with friends</p>
     </div>
-</body>
-
+  </body>
 </html>
