--- a/frontend/index/login.html
+++ b/frontend/index/login.html
@@ -1,180 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico">
-  <link rel="stylesheet" href="/frontend/css/index.css">
-  <link rel="stylesheet" href="/frontend/css/animation.css">
-  <title>Login</title>
-
-</head>
-<style>
-  body::-webkit-scrollbar {
-    display: none;
-  }
-
-  .title {
-    text-align: center;
-    padding: 14px 16px;
-    margin-left: 12%;
-    margin-right: 12%;
-    margin-top: 8%;
-    font-size: 120%;
-  }
-
-  .box {
-    margin-left: 40%;
-    margin-right: 40%;
-  }
-
-  @media only screen and (max-width: 768px) {
-    .box {
-      margin-left: 10%;
-      margin-right: 10%;
-    }
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico" />
+    <link rel="stylesheet" href="/frontend/css/index.css" />
+    <link rel="stylesheet" href="/frontend/css/animation.css" />
+    <title>Login</title>
+  </head>
+  <style>
     .title {
-      margin-top: 30%;
+      text-align: center;
+      padding: 14px 16px;
+      margin: 0 12%;
+      margin-top: 8%;
     }
-  }
 
-  .loginForm {
-    background: var(--main-color-2);
-    /*backdrop-filter: blur(15px); */
-    box-shadow: var(--shadow);
-    padding: 5%;
-    border-radius: 18px;
-  }
+    .title h1 {
+      color: var(--text-color-2);
+    }
 
-  .field {
-    padding: 2%;
-  }
+    .box {
+      margin: 0 30%;
+    }
 
-  .field>label {
-    font-size: 16px;
-    padding: 2%;
-    display: block;
-  }
+    .loginForm {
+      background: var(--main-color-2);
+      box-shadow: var(--shadow);
+      padding: 5%;
+      border-radius: 18px;
+    }
 
-  .field>input[type=text] {
-    padding: 2%;
-    border-radius: 7px;
-    width: 100%;
-    border: rgb(91, 91, 255) solid;
-  }
+    .field {
+      padding: 2%;
+    }
 
-  .field>input:focus {
-    outline: none;
-  }
+    .field > label {
+      margin: 0 0 -8px;
+      padding: 2%;
+      display: block;
+    }
 
-  .field>button {
-    padding: 2%;
-    border-radius: 7px;
-    width: 100%;
-    background: var(--main-color-2);
-    box-shadow: var(--shadow);
-    border: 0.5px rgb(0, 0, 158) solid;
-    font-size: 16px;
-    font-family: 'Open Sans', sans-serif;
-    cursor: pointer;
-  }
+    .field > input[type="text"] {
+      padding: 2%;
+      border-radius: 7px;
+      width: 100%;
+      border: rgb(91, 91, 255) solid;
+    }
 
+    .field > input:focus {
+      outline: none;
+    }
 
-  .fp {
-    color: blue;
-    text-align: right;
-    font-size: 12px;
-  }
+    .field > button {
+      padding: 2%;
+      border-radius: 7px;
+      width: 100%;
+      background: var(--main-color-2);
+      box-shadow: var(--shadow);
+      font: inherit;
+      border: 0.5px rgb(0, 0, 158) solid;
+      font-family: "Open Sans", sans-serif;
+      cursor: pointer;
+    }
 
-  .fp a {
-    text-decoration: none;
-  }
+    .fp {
+      margin: -7px 10px 0;
+      color: blue;
+      text-align: right;
+      font-size: 12px;
+    }
 
-  .new-user {
-    display: flex;
-    justify-content: center;
-    margin-top: 5%;
-    padding: 2%;
-    border-radius: 7px;
-    box-shadow: var(--shadow);
-  }
-</style>
+    .fp a {
+      text-decoration: none;
+    }
 
-<body>
-  <div class="title">
-    <a href="/"><img src="/assets/favicon/favicon-32x32.png"></a>
-    <h2 style="color: white;">Login</h2>
-  </div>
-  <div class="box">
-    <form class="loginForm" id="loginform" name="loginForm">
-      <div class="field">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" placeholder="Enter username">
-      </div>
-      <div class="field">
-        <label for="password">Password</label>
-        <input type="text" id="password" name="password" placeholder="Enter password" autocomplete="off">
-      </div>
-      <div class="fp">
-        <a href="#">Forgot password?</a>
-      </div>
-      <div class="field"><button id="btnLogIn" onclick="senddata()">Login</button></div>
-    </form>
-    <div class="new-user" style="color: white;">
-      <p>Create new account?</p>
-      <a href="sign-up" style="color: rgb(219, 102, 255); padding-left: 2%;">Sign up</a>
+    .new-user {
+      display: flex;
+      justify-content: center;
+      margin-top: 5%;
+      padding: 2%;
+      border-radius: 7px;
+      color: white;
+      box-shadow: var(--shadow);
+    }
+
+    .new-user a {
+      color: rgb(219, 102, 255);
+      padding-left: 2%;
+    }
+
+    @media only screen and (max-width: 768px) {
+      .box {
+        margin: 0 20% 0;
+      }
+
+      .title {
+        margin-top: 20%;
+      }
+    }
+  </style>
+
+  <body>
+    <div class="title">
+      <a href="/"><img src="/assets/favicon/favicon-32x32.png" /></a>
+      <h1>Login</h1>
     </div>
-  </div>
-</body>
-<script>
-  const input_username = document.getElementById("username");
-  const input_password = document.getElementById("password");
+    <div class="box">
+      <form class="loginForm" id="loginform" name="loginForm">
+        <div class="field">
+          <label for="username">Username</label>
+          <input
+            type="text"
+            id="username"
+            name="username"
+            placeholder="Enter username"
+            autocomplete="on"
+          />
+        </div>
+        <div class="field">
+          <label for="password">Password</label>
+          <input
+            type="text"
+            id="password"
+            name="password"
+            placeholder="Enter password"
+            autocomplete="off"
+          />
+        </div>
+        <div class="fp">
+          <a href="#">Forgot password?</a>
+        </div>
+        <div class="field">
+          <button id="btnLogIn" onclick="senddata()">Login</button>
+        </div>
+      </form>
+      <div class="new-user">
+        <p>Create new account?</p>
+        <a href="sign-up">Sign up</a>
+      </div>
+    </div>
+  </body>
+  <script>
+    const input_username = document.getElementById("username");
+    const input_password = document.getElementById("password");
 
-  function senddata() {
-    const clientusername = input_username.value;
-    const clientpassword = input_password.value;
+    function senddata() {
+      const clientusername = input_username.value;
+      const clientpassword = input_password.value;
 
-    if (clientusername === "" || clientpassword === "")
-      alert("Incorrect username and password");
-    else {
-      fetch("/login", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify({
-          clientusername,
-          clientpassword
-        }),
-      })
-        .then((response) => {
-          return response.json();
+      if (clientusername === "" || clientpassword === "")
+        alert("Incorrect username and password");
+      else {
+        fetch("/login", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            clientusername,
+            clientpassword,
+          }),
         })
-        .then((data) => {
-          if (data.status === "success") {
-            fetch("/user", {
-              method: "post",
-              headers: {
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify({
-                clientusername
-              }),
-            })
-            window.location.href = "/"+clientusername;
-          } else {
-            alert(data.message);
-          }
-        })
-        .catch((error) => {
-          console.error(error);
-          alert("error");
-        });
+          .then((response) => {
+            return response.json();
+          })
+          .then((data) => {
+            if (data.status === "success") {
+              fetch("/user", {
+                method: "post",
+                headers: {
+                  "Content-Type": "application/json",
+                },
+                body: JSON.stringify({
+                  clientusername,
+                }),
+              });
+              window.location.href = "/" + clientusername;
+            } else {
+              alert(data.message);
+            }
+          })
+          .catch((error) => {
+            console.error(error);
+            alert("error");
+          });
+      }
     }
-  }
-</script>
-
+  </script>
 </html>
