--- a/frontend/index/sign-up.html
+++ b/frontend/index/sign-up.html
@@ -1,170 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico">
-  <link rel="stylesheet" href="/frontend/css/index.css">
-  <link rel="stylesheet" href="/frontend/css/animation.css">
-  <title>sign-up</title>
-
-</head>
-<style>
-  body::-webkit-scrollbar {
-    display: none;
-  }
-
-  .title {
-    text-align: center;
-    padding: 14px 16px;
-    margin-left: 12%;
-    margin-right: 12%;
-    margin-top: 8%;
-    font-size: 120%;
-  }
-
-  .box {
-    margin-left: 40%;
-    margin-right: 40%;
-  }
-
-  @media only screen and (max-width: 768px) {
-    .box {
-      margin-left: 10%;
-      margin-right: 10%;
-    }
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico" />
+    <link rel="stylesheet" href="/frontend/css/index.css" />
+    <link rel="stylesheet" href="/frontend/css/animation.css" />
+    <title>sign-up</title>
+  </head>
+  <style>
     .title {
-      margin-top: 30%;
+      text-align: center;
+      padding: 14px 16px;
+      margin: 0 12%;
+      margin-top: 8%;
     }
-  }
 
-  .loginForm {
-    background: var(--main-color-2);
-    box-shadow: var(--shadow);
-    padding: 5%;
-    border-radius: 18px;
-  }
+    .title h1 {
+      color: var(--text-color-2);
+    }
+    
+    .box {
+      margin: 0 30%;
+    }
 
-  .field {
-    padding: 2%;
-  }
+    .loginForm {
+      background: var(--main-color-2);
+      box-shadow: var(--shadow);
+      padding: 5%;
+      border-radius: 18px;
+    }
 
-  .field>label {
-    font-size: 16px;
-    padding: 2%;
-    display: block;
-  }
+    .field {
+      padding: 2%;
+    }
 
-  .field>input[type=text] {
-    padding: 2%;
-    border-radius: 7px;
-    width: 100%;
-    border: rgb(91, 91, 255) solid;
-  }
+    .field > label {
+      margin: 0 0 -8px;
+      padding: 2%;
+      display: block;
+    }
 
-  .field>input:focus {
-    outline: none;
-  }
+    .field > input[type="text"] {
+      padding: 2%;
+      border-radius: 7px;
+      width: 100%;
+      border: rgb(91, 91, 255) solid;
+    }
 
-  .field>button {
-    padding: 2%;
-    border-radius: 7px;
-    width: 100%;
-    background: var(--main-color-2);
-    box-shadow: var(--shadow);
-    border: 0.5px rgb(0, 0, 158) solid;
-    font-size: 16px;
-    font-family: 'Open Sans', sans-serif;
-    cursor: pointer;
-  }
+    .field > input:focus {
+      outline: none;
+    }
 
-  .new-user {
-    display: flex;
-    justify-content: center;
-    margin-top: 5%;
-    padding: 2%;
-    border-radius: 7px;
-    box-shadow: var(--shadow);
-  }
-</style>
+    .field > button {
+      padding: 2%;
+      border-radius: 7px;
+      width: 100%;
+      background: var(--main-color-2);
+      box-shadow: var(--shadow);
+      border: 0.5px rgb(0, 0, 158) solid;
+      font-size: 16px;
+      font-family: "Open Sans", sans-serif;
+      cursor: pointer;
+    }
 
-<body>
-  <div class="title">
-    <a href="/"><img src="/assets/favicon/favicon-32x32.png"></a>
-    <h2 style="color: var(--text-color-2)">Sign up</h2>
-  </div>
-  <div class="box">
-    <form class="loginForm" id="loginform" name="loginForm">
-      <div class="field">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" placeholder="Enter username">
-        <p id="err-username" for="username"></p>
-      </div>
-      <div class="field">
-        <label for="password">Password</label>
-        <input type="text" id="password" name="password" placeholder="Enter password" autocomplete="off">
-        <p id="err-password" for="username"></p>
-      </div>
-      <div class="field">
-        <label for="con-password">Confirm Password</label>
-        <input type="text" id="con-password" name="con-password" placeholder="Confirm password" autocomplete="off">
-        <p id="err-con-password" for="username"></p>
-      </div>
-      <div class="field"><button id="btnLogIn" onclick="send_data()">Sign up</button></div>
-    </form>
-    <div class="new-user" style="color: white;">
-      <p>Already have an account?</p>
-      <a href="login" style="color: rgb(219, 102, 255); padding-left: 2%;">Login</a>
+    .new-user {
+      display: flex;
+      justify-content: center;
+      margin-top: 5%;
+      padding: 2%;
+      border-radius: 7px;
+      color: white;
+      box-shadow: var(--shadow);
+    }
+    .new-user {
+      color: rgb(219, 102, 255);
+      padding-left: 2%;
+    }
+
+    @media only screen and (max-width: 768px) {
+      .box {
+        margin: 0 20% 0;
+      }
+
+      .title {
+        margin-top: 20%;
+      }
+    }
+  </style>
+
+  <body>
+    <div class="title">
+      <a href="/"><img src="/assets/favicon/favicon-32x32.png" /></a>
+      <h1>Sign up</h1>
     </div>
-  </div>
+    <div class="box">
+      <form class="loginForm" id="loginform" name="loginForm">
+        <div class="field">
+          <label for="username">Username</label>
+          <input
+            type="text"
+            id="username"
+            name="username"
+            placeholder="Enter username"
+          />
+          <p id="err-username" for="username"></p>
+        </div>
+        <div class="field">
+          <label for="password">Password</label>
+          <input
+            type="text"
+            id="password"
+            name="password"
+            placeholder="Enter password"
+            autocomplete="off"
+          />
+          <p id="err-password" for="username"></p>
+        </div>
+        <div class="field">
+          <label for="con-password">Confirm Password</label>
+          <input
+            type="text"
+            id="con-password"
+            name="con-password"
+            placeholder="Confirm password"
+            autocomplete="off"
+          />
+          <p id="err-con-password" for="username"></p>
+        </div>
+        <div class="field">
+          <button id="btnLogIn" onclick="send_data()">Sign up</button>
+        </div>
+      </form>
+      <div class="new-user">
+        <p>Already have an account?</p>
+        <a href="login">Login</a>
+      </div>
+    </div>
+  </body>
+  <script>
+    const input_username = document.getElementById("username");
+    const input_password = document.getElementById("password");
+    const confirm_password = document.getElementById("con-password");
 
-</body>
-<script>
-  const input_username = document.getElementById("username");
-  const input_password = document.getElementById("password");
-  const confirm_password = document.getElementById("con-password");
+    var err_username = document.getElementById("err-username");
+    var err_password = document.getElementById("err-password");
+    var err_con_password = document.getElementById("err-con-password");
 
-  var err_username = document.getElementById("err-username");
-  var err_password = document.getElementById("err-password");
-  var err_con_password = document.getElementById("err-con-password");
-
-  function send_data() {
-    const clientusername = input_username.value;
-    const clientpassword = input_password.value;
-    const con_password = confirm_password.value;
-    if (username === "" || password === "") {
-      alert("Enter username and password")
-    } else {
-      fetch("/sign-up", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify({
-          clientusername,
-          clientpassword,
-          con_password
-        }),
-      })
-        .then((response) => {
-          return response.json();
+    function send_data() {
+      const clientusername = input_username.value;
+      const clientpassword = input_password.value;
+      const con_password = confirm_password.value;
+      if (username === "" || password === "") {
+        alert("Enter username and password");
+      } else {
+        fetch("/sign-up", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            clientusername,
+            clientpassword,
+            con_password,
+          }),
         })
-        .then((data) => {
-          if (data.status === "success") {
-            window.location.href = "/" + clientusername;
-          } else {
-            alert(data.message);
-          }
-        })
-        .catch((error) => {
-          console.error(error);
-          alert("An error occurred while trying to log in");
-        });
+          .then((response) => {
+            return response.json();
+          })
+          .then((data) => {
+            if (data.status === "success") {
+              window.location.href = "/" + clientusername;
+            } else {
+              alert(data.message);
+            }
+          })
+          .catch((error) => {
+            console.error(error);
+            alert("An error occurred while trying to log in");
+          });
+      }
     }
-  }
-</script>
-
+  </script>
 </html>
