--- a/frontend/index/index.html
+++ b/frontend/index/index.html
@@ -1,86 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico" />
-    <link rel="stylesheet" href="/frontend/css/index.css" />
-    <link rel="stylesheet" href="/frontend/css/animation.css" />
-    <title>Nova Star</title>
-  </head>
-  <style>
-    .header-overlay {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 2% 3%;
-    }
 
-    .header-overlay > a img{
-        display: flex;
-    }
-    
-    .user {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico" />
+  <link rel="stylesheet" href="/frontend/css/index.css" />
+  <link rel="stylesheet" href="/frontend/css/animation.css" />
+  <title>Nova Star</title>
+</head>
+<style>
+  .title {
+    text-align: center;
+    background: var(--main-color-2);
+    padding: 14px 16px;
+    margin: 3% 12% 6%;
+    min-width: 250px;
+    max-width: 80%;
+    font-size: 120%;
+    border-radius: 25px;
+    box-shadow: var(--shadow);
+  }
+</style>
 
-    .user > a {
-        padding: 0 10px;
-        color: var(--text-color-2);
-        cursor: pointer;
-        transition: all 0.3s ease 0s;
-    }
-
-    .user > a:hover{
-        color: rgba(var(--text-color-2), 0.8);
-    }
-
-    .title {
-        text-align: center;
-        background: var(--main-color-2);
-        padding: 14px 16px;
-        margin: 3% 12% 6%;
-        min-width: 250px; 
-        max-width: 80%;
-        font-size: 120%;
-        border-radius: 25px;
-        box-shadow: var(--shadow);
-    }
-
-
-    @media only screen and (max-width: 768px) {
-        .title {
-            margin: 12% 5% 10%;
-            max-width: 90%;
-        }
-
-        .header-overlay {
-            padding: 2% 1%;
-        }
-    } 
-  </style>
-
-  <body class="background">
-    <header class="header-overlay">
-      <a href="/"
-        ><img src="/assets/favicon/favicon-32x32.png" loading="lazy"
-      /></a>
-      <div class="user">
-        <a href="login">Login</a>
-        <a href="sign-up">Sign up</a>
-      </div>
-    </header>
-    <!--Title-->
-    <div class="title">
-      <img src="/assets/favicon/android-chrome-192x192.png" loading="lazy" />
-      <h1>Nova Star</h1>
+<body class="background">
+  <header class="header-overlay">
+    <a href="/"><img src="/assets/favicon/favicon-32x32.png" loading="lazy" /></a>
+    <div class="user">
+      <a href="login">Login</a>
+      <a href="sign-up">Sign up</a>
     </div>
-    <div class="title">
-      <h2># Open space for you</h2>
-      <p>Play 'fun' Games with friends</p>
-    </div>
-  </body>
+  </header>
+  <!--Title-->
+  <div class="title">
+    <img src="/assets/favicon/android-chrome-192x192.png" loading="lazy" />
+    <h1>Nova Star</h1>
+  </div>
+  <div class="title">
+    <h2># Open space for you</h2>
+    <p>Play 'fun' Games with friends</p>
+  </div>
+</body>
+
 </html>
