--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -128,7 +128,7 @@
 
 <body>
   <div id="container">
-    <div id="planet-1"></div>
+    <div id="planet-1" loading="lazy"></div>
     <div id="mid">
       <div class="title">
         <a href="/"><img src="/assets/favicon/favicon-32x32.png"></a>
@@ -155,7 +155,7 @@
         </div>
       </div>
     </div>
-    <div id="planet-2"></div>
+    <div id="planet-2" loading="lazy"></div>
   </div>
 </body>
 <script>
