--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico" />
-  <link rel="stylesheet" href="/frontend/css/global.css" />
-  <link rel="stylesheet" href="/frontend/css/animation.css" />
+  <link rel="stylesheet" href="/frontend/global.css" />
+  <link rel="stylesheet" href="/frontend/animation.css" />
   <title>Nova Star</title>
 </head>
 <style>
