frontend style fix III

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,6 +22,16 @@
     border-radius: 25px;
     box-shadow: var(--shadow);
   }
+
+  ul {
+    display: flex;
+    justify-content: space-between;
+    color: white;
+  }
+
+  ul>li {
+    padding-left: 0;
+  }
 </style>
 
 <body class="background">
