--- a/frontend/sign-up.html
+++ b/frontend/sign-up.html
@@ -11,6 +11,16 @@
   <title>sign-up</title>
 </head>
 <style>
+  ul {
+    display: flex;
+    justify-content: space-between;
+    color: white;
+  }
+
+  ul>li {
+    padding-left: 0;
+  }
+
   #container {
     display: flex;
     justify-content: space-between;
