--- a/frontend/login.html
+++ b/frontend/login.html
@@ -11,6 +11,16 @@
   <title>Login</title>
 </head>
 <style>
+  ul {
+    display: flex;
+    justify-content: space-between;
+    color: white;
+  }
+
+  ul>li {
+    padding-left: 0;
+  }
+
   #container {
     display: flex;
     justify-content: space-between;
