--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,7 +45,7 @@
   <!--Title-->
   <div class="title">
     <img src="/assets/favicon/android-chrome-192x192.png" loading="lazy" />
-    <h1>Nova Star</h1>
+    <h1>CosmicArcade</h1>
   </div>
   <div class="title">
     <h2># Open space for you</h2>
