--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,55 +2,167 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico" />
-  <link rel="stylesheet" href="/frontend/global.css" />
-  <link rel="stylesheet" href="/frontend/animation.css" />
-  <title>Nova Star</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <link rel="stylesheet" href="/frontend/global.css">
+    <link rel="stylesheet" href="/frontend/animation.css"> -->
+  <title>Cosmic Arcade - Home</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    header {
+      background-color: #333;
+      color: #fff;
+      padding: 10px;
+    }
+
+    nav ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav li {
+      display: inline;
+      margin-right: 20px;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #fff;
+    }
+
+    #hero {
+      background-image: url('space_bg.jpg');
+      background-size: cover;
+      height: 400px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    #hero h1 {
+      font-size: 3em;
+      margin-bottom: 10px;
+    }
+
+    .cta-button {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #ff9900;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 4px;
+      font-weight: bold;
+    }
+
+    #featured-games {
+      text-align: center;
+      padding: 40px 0;
+    }
+
+    .game-card {
+      display: inline-block;
+      width: 200px;
+      padding: 20px;
+      margin: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    .game-card img {
+      width: 100%;
+      max-height: 150px;
+      object-fit: cover;
+      border-radius: 4px;
+    }
+
+    #cosmic-challenges {
+      text-align: center;
+      padding: 40px 0;
+      background-color: #f0f0f0;
+    }
+
+    #testimonials {
+      text-align: center;
+      padding: 40px 0;
+      background-color: #333;
+      color: #fff;
+    }
+
+    #join-community {
+      text-align: center;
+      padding: 40px 0;
+      background-color: #ff9900;
+      color: #fff;
+    }
+
+    footer {
+      text-align: center;
+      padding: 10px;
+      background-color: #333;
+      color: #fff;
+    }
+  </style>
 </head>
-<style>
-  .title {
-    text-align: center;
-    background: var(--main-color-2);
-    padding: 14px 16px;
-    margin: 3% 12% 6%;
-    min-width: 250px;
-    max-width: 80%;
-    font-size: 120%;
-    border-radius: 25px;
-    box-shadow: var(--shadow);
-  }
 
-  ul {
-    display: flex;
-    justify-content: space-between;
-    color: white;
-  }
-
-  ul>li {
-    padding-left: 0;
-  }
-</style>
-
-<body class="background">
-  <header class="header-overlay">
-    <a href="/"><img src="/assets/favicon/favicon-32x32.png" loading="lazy" /></a>
-    <div class="user">
-      <a href="login">Login</a>
-      <a href="sign-up">Sign up</a>
-    </div>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#games">Games</a></li>
+        <li><a href="#high-scores">High Scores</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </header>
-  <!--Title-->
-  <div class="title">
-    <img src="/assets/favicon/android-chrome-192x192.png" loading="lazy" />
-    <h1>CosmicArcade</h1>
-  </div>
-  <div class="title">
-    <h2># Open space for you</h2>
-    <p>Play 'fun' Games with friends</p>
-  </div>
+
+  <section id="hero">
+    <div class="content">
+      <h1>Cosmic Arcade</h1>
+      <p>Explore the Cosmic Adventures!</p>
+      <a href="/sign-up" class="cta-button">Start Your Cosmic Adventure Now!</a>
+    </div>
+  </section>
+
+  <section id="featured-games">
+    <h2>Featured Games</h2>
+    <div class="game-card">
+      <img src="game1.jpg" alt="Game 1">
+      <h3>Game 1</h3>
+      <a href="/sign-up">Play Now</a>
+    </div>
+    <div class="game-card">
+      <img src="game2.jpg" alt="Game 2">
+      <h3>Game 2</h3>
+      <a href="/sign-up">Play Now</a>
+    </div>
+    <!-- Add more game cards here -->
+  </section>
+
+  <section id="cosmic-challenges">
+    <h2>Cosmic Challenges</h2>
+    <p>Take on exciting challenges in the cosmos and earn cosmic rewards!</p>
+  </section>
+
+  <section id="join-community">
+    <h2>Join Our Community</h2>
+    <p>Sign up to stay updated on the latest games, events, and promotions.</p>
+    <a href="#" class="cta-button">Join Now</a>
+  </section>
+
+  <footer>
+    <p>&copy; 2023 Cosmic Arcade. All rights reserved.</p>
+  </footer>
+  <script>
+
+  </script>
 </body>
 
 </html>
