--- a/frontend/index.html
+++ b/frontend/index.html
@@ -114,7 +114,8 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#home">Home</a></li>
+        <li><a href="/"><img src="/assets/favicon/favicon-32x32.png"></a></li>
+        <!-- <li><a href="#home">Home</a></li> -->
         <li><a href="#games">Games</a></li>
         <li><a href="#high-scores">High Scores</a></li>
         <li><a href="#about">About</a></li>
@@ -135,15 +136,15 @@
     <h2>Featured Games</h2>
     <div class="game-card">
       <img src="game1.jpg" alt="Game 1">
-      <h3>Game 1</h3>
-      <a href="/sign-up">Play Now</a>
+      <h3>Cosmic shoot</h3>
+      <a href="/sign-up" class="cta-button">Play Now</a>
     </div>
     <div class="game-card">
       <img src="game2.jpg" alt="Game 2">
-      <h3>Game 2</h3>
-      <a href="/sign-up">Play Now</a>
+      <h3>tic tac toe</h3>
+      <a href="/sign-up" class="cta-button">Play Now</a>
     </div>
-    <!-- Add more game cards here -->
+
   </section>
 
   <section id="cosmic-challenges">
