--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,8 @@
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
+      background-color: #333;
+      color: #fff;
     }
 
     header {
@@ -85,14 +87,15 @@
       text-align: center;
       padding: 40px 0;
       background-color: #f0f0f0;
+      color: #333;
     }
 
-    #testimonials {
+    /* #testimonials {
       text-align: center;
       padding: 40px 0;
       background-color: #333;
       color: #fff;
-    }
+    } */
 
     #join-community {
       text-align: center;
@@ -155,7 +158,7 @@
   <section id="join-community">
     <h2>Join Our Community</h2>
     <p>Sign up to stay updated on the latest games, events, and promotions.</p>
-    <a href="#" class="cta-button">Join Now</a>
+    <a href="/sign-up" class="cta-button">Join Now</a>
   </section>
 
   <footer>
