--- a/frontend/index.html
+++ b/frontend/index.html
@@ -78,7 +78,7 @@
 
     .game-card img {
       width: 100%;
-      max-height: 150px;
+      max-height: 100%;
       object-fit: cover;
       border-radius: 4px;
     }
@@ -143,7 +143,7 @@
       <a href="/sign-up" class="cta-button">Play Now</a>
     </div>
     <div class="game-card">
-      <img src="game2.jpg" alt="Game 2">
+      <img src="../assets/tictactoewlp.png" alt="Game 2">
       <h3>tic tac toe</h3>
       <a href="/sign-up" class="cta-button">Play Now</a>
     </div>
