--- a/frontend/index.html
+++ b/frontend/index.html
@@ -138,7 +138,7 @@
   <section id="featured-games">
     <h2>Featured Games</h2>
     <div class="game-card">
-      <img src="game1.jpg" alt="Game 1">
+      <img src="../assets/cosmicshootwlp.png" alt="Game 1">
       <h3>Cosmic shoot</h3>
       <a href="/sign-up" class="cta-button">Play Now</a>
     </div>
