--- a/frontend/login.html
+++ b/frontend/login.html
@@ -150,12 +150,15 @@
             <label for="username">Username</label>
             <input type="text" id="username" name="username" placeholder="Enter username">
           </div>
+          <div class="fp">
+            <a onclick="forgotusername()">Forgot username?</a>
+          </div>
           <div class="field">
             <label for="password">Password</label>
             <input type="text" id="password" name="password" placeholder="Enter password" autocomplete="off">
           </div>
           <div class="fp">
-            <a href="#">Forgot password?</a>
+            <a onclick="forgotpasssword()">Forgot password?</a>
           </div>
           <div class="field"><button id="btnLogIn" onclick="senddata()">Login</button></div>
         </form>
@@ -213,6 +216,137 @@
           alert("error");
         });
     }
+  }
+  function back() {
+    document.getElementById("mid").innerHTML = `<div class="title">
+        <a href="/"><img src="/assets/favicon/favicon-32x32.png"></a>
+        <h1 style="color: white;">Login</h1>
+      </div>
+      <div class="box">
+        <form class="loginForm" id="loginform" name="loginForm">
+          <div class="field">
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" placeholder="Enter username">
+          </div>
+          <div class="fp">
+            <a onclick="forgotusername()">Forgot username?</a>
+          </div>
+          <div class="field">
+            <label for="password">Password</label>
+            <input type="text" id="password" name="password" placeholder="Enter password" autocomplete="off">
+          </div>
+          <div class="fp">
+            <a onclick="forgotpasssword()">Forgot password?</a>
+          </div>
+          <div class="field"><button id="btnLogIn" onclick="senddata()">Login</button></div>
+        </form>
+        <div class="new-user" style="color: white;">
+          <p>Create new account?</p>
+          <a href="sign-up" style="color: rgb(219, 102, 255); padding-left: 2%;">Sign up</a>
+        </div>
+      </div>
+    </div>`;
+  }
+  function send_username() {
+    const clientemail = document.getElementById("email").value;
+    fetch("/send-username", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+      },
+      body: JSON.stringify({
+        clientemail,
+      }),
+    })
+      .then((response) => {
+        return response.json();
+      })
+      .then((data) => {
+        if (data) {
+          console.log(data)
+          document.getElementById("mid").innerHTML = `<div class="title">
+        <a href="/"><img src="/assets/favicon/favicon-32x32.png"></a>
+        <h1 style="color: white;">Login</h1>
+      </div>
+      <div class="box">
+        <form class="loginForm" id="loginform" name="loginForm">
+          <div class="field">
+            <label>Username sent to your email</label>
+          </div>
+          <div class="field">
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" placeholder="Enter username">
+          </div>
+          <div class="fp">
+            <a onclick="forgotusername()">Forgot username?</a>
+          </div>
+          <div class="field">
+            <label for="password">Password</label>
+            <input type="text" id="password" name="password" placeholder="Enter password" autocomplete="off">
+          </div>
+          <div class="fp">
+            <a onclick="forgotpasssword()">Forgot password?</a>
+          </div>
+          <div class="field"><button id="btnLogIn" onclick="senddata()">Login</button></div>
+        </form>
+        <div class="new-user" style="color: white;">
+          <p>Create new account?</p>
+          <a href="sign-up" style="color: rgb(219, 102, 255); padding-left: 2%;">Sign up</a>
+        </div>
+      </div>
+    </div>`;
+        } else {
+          alert(data.message);
+        }
+      })
+      .catch((error) => {
+        console.error(error);
+        alert("An error occurred while trying to send email");
+      });
+  }
+  function forgotusername() {
+    document.getElementById("mid").innerHTML = `<div class="field">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Enter Email" />
+            <p id="err-email" for="email"></p>
+            <button onclick="send_username()">send email</button>
+            <button onclick="back()">back</button>
+          </div>`;
+  }
+  function resetpassword() {
+    const clientemail = document.getElementById("email").value;
+    fetch("/sign-up", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+      },
+      body: JSON.stringify({
+        clientemail,
+      }),
+    })
+      .then((response) => {
+        return response.json();
+      })
+      .then((data) => {
+        if (data.status === "success") {
+          // window.location.href = "/";
+        } else {
+          alert(data.message);
+        }
+      })
+      .catch((error) => {
+        console.error(error);
+        alert("An error occurred while trying to send email");
+      });
+  }
+  function forgotpasssword() {
+    document.getElementById("mid").innerHTML = `<div class="field">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Enter Email" />
+            <p id="err-email" for="email"></p>
+            <button onclick="resetpassword()">send email</button>
+            <button onclick="back()">back</button>
+          </div>`;
   }
 </script>
 
