--- a/frontend/resetpassword.html
+++ b/frontend/resetpassword.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset password</title>
+    <title>Reset Password</title>
 </head>
 <body>
-    
+    <h1>Reset Your Password</h1>
+    <form id="resetPasswordForm" action="/reset-password/:token" method="POST">
+        <div>
+            <label for="newPassword">New Password:</label>
+            <input type="password" id="newPassword" name="newPassword" placeholder="Enter your new password" required>
+        </div>
+        <div>
+            <label for="confirmPassword">Confirm Password:</label>
+            <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your new password" required>
+        </div>
+        <div>
+            <button type="submit">Reset Password</button>
+        </div>
+    </form>
+
+    <div id="resetMessage"></div>
+
+    <script>
+        const resetPasswordForm = document.getElementById('resetPasswordForm');
+        const resetMessage = document.getElementById('resetMessage');
+
+        resetPasswordForm.addEventListener('submit', async (e) => {
+            e.preventDefault();
+
+            const newPassword = document.getElementById('newPassword').value;
+            const confirmPassword = document.getElementById('confirmPassword').value;
+
+            if (newPassword !== confirmPassword) {
+                resetMessage.innerText = 'Passwords do not match';
+                return;
+            }
+
+            const token = window.location.pathname.split('/').pop();
+
+            const response = await fetch(`/reset-password/${token}`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ newPassword }),
+            });
+
+            const data = await response.json();
+
+            if (response.ok) {
+                resetMessage.innerText = data.message;
+                window.location = "/login";
+            } else {
+                resetMessage.innerText = data.message;
+            }
+        });
+    </script>
 </body>
 </html>
