update reset password

--- a/frontend/resetpassword.html
+++ b/frontend/resetpassword.html
@@ -4,7 +4,7 @@
     <title>Reset Password</title>
 </head>
 <body>
-    <h1>Reset Your Password</h1>
+    <h1>Reset Your Password.....</h1>
     <form id="resetPasswordForm" action="/reset-password/:token" method="POST">
         <div>
             <label for="newPassword">New Password:</label>
