--- a/frontend/resetpassword.html
+++ b/frontend/resetpassword.html
@@ -76,7 +76,7 @@
             <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your new password" required>
         </div>
         <div>
-            <button type="submit">Reset Password</button>
+            <button type="submit">Reset password</button>
         </div>
     </form>
 
