--- a/frontend/sign-up.html
+++ b/frontend/sign-up.html
@@ -205,6 +205,7 @@
         })
         .then((data) => {
           if (data.status === "success") {
+            localStorage.setItem("username", clientusername);
             window.location.href = "/";
           } else {
             alert(data.message);
